tests/errors/surf_parse_09.experr
error: expected ']' to close the list